[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-bootstrap-v5 = "1.0.11"
django-bootstrap5 = "23.3"
crispy-bootstrap5 = "0.7"
django-bootstrap-datepicker-plus = "5.0.4"
djangorestframework = "3.14.0"
django-crispy-forms = "2.0"
reportlab = "^4.0.4"
[tool.poetry.dev-dependencies]
